Vulkano files migration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,17 +6,51 @@ set(VULKANO_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
 
 # Header files
 set(VULKANO_HEADER_FILES
+    ${VULKANO_INCLUDE_DIR}/vo_api.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_buffer.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_common.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_descriptor.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_deviceContext.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_fence.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_frameBuffer.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_image.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_memory.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_model.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_pipeline.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_renderer.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_samplers.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_shader.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_swapChain.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_tools.hpp
+    ${VULKANO_INCLUDE_DIR}/vo_window.hpp
     ${VULKANO_INCLUDE_DIR}/vulkano.hpp
 )
 
 set(VULKANO_SOURCE_FILES
+    ${VULKANO_SOURCE_DIR}/vo_buffer.cpp
+    ${VULKANO_SOURCE_DIR}/vo_descriptor.cpp
+    ${VULKANO_SOURCE_DIR}/vo_deviceContext.cpp
+    ${VULKANO_SOURCE_DIR}/vo_fence.cpp
+    ${VULKANO_SOURCE_DIR}/vo_frameBuffer.cpp
+    ${VULKANO_SOURCE_DIR}/vo_image.cpp
+    ${VULKANO_SOURCE_DIR}/vo_memory.cpp
+    ${VULKANO_SOURCE_DIR}/vo_model.cpp
+    ${VULKANO_SOURCE_DIR}/vo_pipeline.cpp
+    ${VULKANO_SOURCE_DIR}/vo_renderer.cpp
+    ${VULKANO_SOURCE_DIR}/vo_samplers.cpp
+    ${VULKANO_SOURCE_DIR}/vo_shader.cpp
+    ${VULKANO_SOURCE_DIR}/vo_swapChain.cpp
+    ${VULKANO_SOURCE_DIR}/vo_window.cpp
+)
 
+set(VULKANO_PRIVATE_HEADER_FILES
+    ${VULKANO_SOURCE_DIR}/vo_utilities.hpp
 )
 
 #--------------------------------------------------------------------
 # Library Setup
 #--------------------------------------------------------------------
-add_library(${PROJECT_NAME} ${VULKANO_SOURCE_FILES} ${VULKANO_HEADER_FILES})
+add_library(${PROJECT_NAME} ${VULKANO_SOURCE_FILES} ${VULKANO_HEADER_FILES} ${VULKANO_PRIVATE_HEADER_FILES})
 target_include_directories(${PROJECT_NAME}
   PUBLIC
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
@@ -26,11 +60,10 @@ target_include_directories(${PROJECT_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_precompile_headers(${PROJECT_NAME} PRIVATE ${DURA_INCLUDE_DIR}/vulkano.hpp)
+target_precompile_headers(${PROJECT_NAME} PRIVATE ${VULKANO_INCLUDE_DIR}/vulkano.hpp)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC ${VULKANO_LIBRARIES})
 
-# Enforce standards conformance on MSVC
 target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
